# CMakeCPMTemplate

./: CMakeLists.txt
source/: main.cpp
